# kanban-pro

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  JOURNAL.md  PROMPT.md  QUESTIONS.md  README.md  SPEC.md  TODO.md  llms.txt  pyproject.toml
.agents/scripts/: README.md  migrate_plan_shape.py  plan-migration-backup-20260714T151501.json
docs/: adapter-structure.md  comparison.md  configuration.md  flow-in-db-plan.md  harness-adaptation-plan.md  hermes-kanban.md  internals.md  methods.md
docs/examples/: flows-default.yaml
docs/research/: kanban-backends.md
examples/notifier/: README.md  kanban-notifier.py
examples/skills/kanban-orchestrator/: SKILL.md
examples/skills/kanban-retro/: SKILL.md
kanban_pro/: __init__.py  config.py  migrate.py
kanban_pro/adapters/: __init__.py  _base.py  memory.py  native.py
kanban_pro/api/: __init__.py  board.html
kanban_pro/core/: __init__.py  actor_policy.py  augment.py  changelog.py  checks.py  copy.py  dedupe.py  ext_store.py  flow.py  presets.py  recording.py  verification.py  work.py  work_report.py
kanban_pro/domain/: __init__.py  ids.py
kanban_pro/mcp/: __init__.py  __main__.py
kanban_pro/ports/: __init__.py
tests/: contract_suite.py  test_actor_policy.py  test_api.py  test_augment.py  test_changelog.py  test_checks.py  test_cross_board.py  test_dedupe_attention.py  test_domain.py  test_ext_overlay.py  test_flow.py  test_hermes_adapter.py  test_ids.py  test_mcp_server.py  test_memory_adapter.py  test_migrate.py  test_native_store.py  test_priority.py  test_toolref.py  test_work.py  toolref.py
(+7 files in other folders)
