[project]
name = "kanban-pro"
version = "0.0.1"
description = "Backend-agnostic kanban proxy: one canonical kanban API, swappable backend adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "aiosqlite>=0.20",
    "mcp>=1.28.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
kanban-pro-mcp = "kanban_pro.mcp:main"
kanban-pro-ui = "kanban_pro.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kanban_pro"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, comprehensions
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
